# flogi

./: .cursorignore  .gitattributes  .gitignore  CLAUDE.md  docker-compose.full.yml  justfile
.autopilot/: config.yml  generate.sh  manifest.json  manifest.sh  port-registry.json  prompt-template.md  scanner.sh
.github/workflows/: justfile-sync.yml
00_core_infra/: docker-compose.infra.yml
00_core_infra/00_common/: init-db-extensions.sh
00_core_infra/00_common_cfg_fx/: init-db-extensions.sh  move_data.py
00_core_infra/01_live_DB/: Dockerfile  README_DB.md  README_live_DB.md
00_core_infra/01_live_DB/01_user/: 00_user_enums_and_types.sql
00_core_infra/02_archive_DB/: Dockerfile
00_core_infra/03_redis/: Dockerfile  README_redis.md  redis.conf
00_core_infra/06_msg_queue/: README.md
02_diagnostics_and_tests/: README_err_check.md
02_pipeline/: 0_tech_flow.md  1_user_flow.md  2_user_flow.md  3_user_flow.md  4_connection_figma.md  Sys_Docker.md  Sys_archi.md  서비스 총평.md  유사연구&사업.md
02_pipeline/00_Celery/: tasks.py
03_pipeline/04_mk_msg/: pyproject.toml
05_mk_msg/: Dockerfile
docs/: FLOGI.md  structure.txt
docs/ADR/: 00_core_infra.txt
