[project]
name = "comfort-commit"
version = "0.1.0"
description = "AI 기반 커밋 & 작업 흐름 기록 자동화 시스템"
authors = [
    {name = "papa-channy",email = "chan12cks@naver.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">3.13,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "authlib (>=1.6.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "databases (>=0.9.0,<0.10.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "aiohttp (>=3.12.2,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
